# bilinguify

./: .gitignore  README.md  config.ini.temp  main.py  pyproject.toml  requirements.txt  test_async.py  test_read.py
input_book/: Alice's Adventures in Wonderland.epub
reader/: epub.py
shell/: export_poetry.sh
translator/: __init__.py  chatGPT.py  openai.py
